# wfgen

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  setup.py.bak
.github/workflows/: build_it.yml  build_it_2004.yml  build_it_latest.yml
apps/: logger_file.cpp  logger_server.cc  wavgen_fm.cc  wavgen_linmod.cc  wavgen_multitone.cc  wavgen_tone.cc  wfgen_am.cc  wfgen_am.cpp  wfgen_fhssgen.cc  wfgen_fm.cc  wfgen_fm.cpp  wfgen_fskmod.cc  wfgen_fskmod.cpp  wfgen_linmod.cc  wfgen_multitone.cpp  wfgen_tone.cpp  wfgen_wbofdmgen.cc  wfgen_wbofdmgen.cpp
include/: afmodem.hh  analog.hh  containers.hh  forward.hh  fskmodems.hh  labels.hh  logger.hh  modulation.hh  noisemodem.hh  wav.hh  wbofdmgen.hh  writer.hh
py_src/wfgen/: __init__.py  c_logger.py  client.py  default_client.json  default_server.json  launcher.py  server.py  utils.py
scenarios/: example_scenario_000.json  example_scenario_001.json
scenarios/V29/: v29_0001.json  v29_0002.json  v29_0003.json  v29_0004.json  v29_0005.json  v29_0006.json  v29_0007.json  v29_0008.json  v29_0009.json  v29_0010.json  v29_0011.json  v29_0012.json  v29_0013.json  v29_0014.json  v29_0015.json  v29_0016.json  v29_0017.json  v29_0018.json  v29_0019.json  v29_0020.json  v29_0021.json  v29_0022.json  v29_0023.json  v29_0024.json  v29_0025.json  v29_0026.json  v29_0027.json  v29_0028.json  v29_0029.json  v29_0030.json  v29_0031.json  v29_0032.json  v29_0033.json  v29_0034.json  v29_0035.json  v29_0036.json  v29_0037.json  v29_0038.json  (+7 more)
scripts/: consolidate_reports.py  proc_query.py  wav_server.py  wfgen_env.sh
src/: afmodem.cc  analog.cc  containers.cc  fskmodems.cc  labels.cc  logger.cc  modulation.cc  noisemodem.cc  wav.cc  wbofdmgen.cc  writer.cc
test/: test_container.cc  test_imports.py  test_server.py
(+4242 files in other folders)
